tests/NormalTests/paczka1/small_fuzzy/89933799.err
Error in line 1: hIpLbDG S263 72,6
Error in line 7: mpi2607g7u A484 69,3
Error in line 4: hIpLbDG A484 54,7
Error in line 14: hIpLbDG S363 -6,3
